--- a/contact.html
+++ b/contact.html
@@ -171,9 +171,9 @@
                 <div class="col-12 mt-2 mb-4">
                     <div class="row">
                         <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
-                            <h5 class="font-weight-bold mb-2">Get In Touch</h5>
-                            <p class="mb-2">123 Street, New York, USA</p>
-                            <p class="mb-0">फोन नंबर +012 345 67890</p>
+                            <h5 class="font-weight-bold mb-2">संपर्क</h5>
+                            <p class="mb-2">देवकर वस्ती, प्रभाग क्रमांक ७, स्वयंवर मंगल कार्यालया जवळ</p>
+                            <p class="mb-0">फोन नंबर +91 8605420585</p>
                         </div>
                         <div class="col-sm-6 text-center text-sm-left">
                             <h5 class="font-weight-bold mb-2">Opening Hours</h5>
